[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Games/ReflexCircle/ReflexCircle.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Games/ReflexCircle/ReflexEnemy.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Games/ReflexCircle/DrawSemiCircle.gd" type="Script" id=3]
[ext_resource path="res://Assets/ReflexCircle/Enemy.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 175, 5 )

[node name="ReflexCircle" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" type="Node2D" parent="."]

[node name="SpawnPositions" type="Node2D" parent="."]

[node name="Pos0" type="Position2D" parent="SpawnPositions"]
position = Vector2( 560, 540 )

[node name="Pos1" type="Position2D" parent="SpawnPositions"]
position = Vector2( 1360, 540 )

[node name="Pos2" type="Position2D" parent="SpawnPositions"]
position = Vector2( 960, 140 )

[node name="Pos3" type="Position2D" parent="SpawnPositions"]
position = Vector2( 960, 940 )

[node name="ReflexEnemy" type="Node2D" parent="."]
position = Vector2( 960, 540 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="ReflexEnemy"]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )

[node name="Attacks" type="Node2D" parent="ReflexEnemy"]

[node name="HalfCirle" type="Node2D" parent="ReflexEnemy/Attacks"]
visible = false
script = ExtResource( 3 )

[node name="Collider" type="Area2D" parent="ReflexEnemy/Attacks/HalfCirle"]
monitoring = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ReflexEnemy/Attacks/HalfCirle/Collider"]
build_mode = 1

[node name="LaserBeams" type="Node2D" parent="ReflexEnemy/Attacks"]
visible = false

[node name="Collider" type="Area2D" parent="ReflexEnemy/Attacks/LaserBeams"]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ReflexEnemy/Attacks/LaserBeams/Collider"]
position = Vector2( 275, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ReflexEnemy/Attacks/LaserBeams/Collider"]
position = Vector2( -275, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="ReflexEnemy/Attacks/LaserBeams/Collider"]
position = Vector2( 0, 275 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="ReflexEnemy/Attacks/LaserBeams/Collider"]
position = Vector2( 0, -275 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Lines" type="Node2D" parent="ReflexEnemy/Attacks/LaserBeams"]

[node name="Line2D" type="Line2D" parent="ReflexEnemy/Attacks/LaserBeams/Lines"]
points = PoolVector2Array( -450, 0, -100, 0 )
default_color = Color( 1, 1, 1, 0.498039 )

[node name="Line2D2" type="Line2D" parent="ReflexEnemy/Attacks/LaserBeams/Lines"]
points = PoolVector2Array( 450, 0, 100, 0 )
default_color = Color( 1, 1, 1, 0.498039 )

[node name="Line2D3" type="Line2D" parent="ReflexEnemy/Attacks/LaserBeams/Lines"]
points = PoolVector2Array( 0, -450, 0, -100 )
default_color = Color( 1, 1, 1, 0.498039 )

[node name="Line2D4" type="Line2D" parent="ReflexEnemy/Attacks/LaserBeams/Lines"]
points = PoolVector2Array( 0, 450, 0, 100 )
default_color = Color( 1, 1, 1, 0.498039 )

[node name="LaserRays" type="Node2D" parent="ReflexEnemy/Attacks"]
visible = false

[node name="Collider" type="Area2D" parent="ReflexEnemy/Attacks/LaserRays"]
monitoring = false

[node name="Lines" type="Node2D" parent="ReflexEnemy/Attacks/LaserRays"]

[node name="Tween" type="Tween" parent="ReflexEnemy"]

[connection signal="area_entered" from="ReflexEnemy/Attacks/HalfCirle/Collider" to="." method="_on_collision_detected"]
[connection signal="area_entered" from="ReflexEnemy/Attacks/LaserBeams/Collider" to="." method="_on_collision_detected"]
[connection signal="area_entered" from="ReflexEnemy/Attacks/LaserRays/Collider" to="." method="_on_collision_detected"]
